--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@ node_modules
 .output
 
 /build/
+/build/
 /public/build
 /api/index.js
 /api/index.js.map
+/api/metafile.js.json
+/api/metafile.server.json
