--- a/package.json
+++ b/package.json
@@ -7,21 +7,28 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@prisma/client": "^5.0.0",
     "@remix-run/node": "^1.19.1",
     "@remix-run/react": "^1.19.1",
     "@remix-run/vercel": "^1.19.1",
     "@vercel/node": "^2.10.3",
+    "bcrypt": "^5.1.0",
     "isbot": "^3.6.8",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "resend": "^0.17.2",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.19.1",
     "@remix-run/eslint-config": "^1.19.1",
     "@remix-run/serve": "^1.19.1",
+    "@types/bcrypt": "^5.0.0",
+    "@types/node": "^20.4.5",
     "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
     "eslint": "^8.38.0",
+    "prisma": "^5.0.0",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.4"
   },
