--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/react-dom": "^18.0.11",
     "eslint": "^8.38.0",
     "prisma": "^5.0.0",
+    "remix-development-tools": "^1.4.1",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.4"
   },
