--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@remix-run/dev": "^1.19.1",
     "@remix-run/eslint-config": "^1.19.1",
     "@remix-run/serve": "^1.19.1",
+    "@tailwindcss/typography": "^0.5.9",
     "@types/bcrypt": "^5.0.0",
     "@types/node": "^20.4.5",
     "@types/react": "^18.0.35",
