--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@prisma/client": "^5.0.0",
+    "@prisma/client": "^5.1.1",
     "@remix-run/node": "^1.19.1",
     "@remix-run/react": "^1.19.1",
     "@remix-run/vercel": "^1.19.1",
+    "@simplewebauthn/browser": "^7.4.0",
+    "@simplewebauthn/server": "^7.4.0",
     "@vercel/node": "^2.10.3",
     "bcrypt": "^5.1.0",
     "classnames": "^2.3.2",
@@ -25,13 +27,14 @@
     "@remix-run/dev": "^1.19.1",
     "@remix-run/eslint-config": "^1.19.1",
     "@remix-run/serve": "^1.19.1",
+    "@simplewebauthn/typescript-types": "^7.4.0",
     "@tailwindcss/typography": "^0.5.9",
     "@types/bcrypt": "^5.0.0",
     "@types/node": "^20.4.5",
     "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
     "eslint": "^8.38.0",
-    "prisma": "^5.0.0",
+    "prisma": "^5.1.1",
     "remix-development-tools": "^1.4.1",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.4"
