--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@remix-run/vercel": "^1.19.1",
     "@simplewebauthn/browser": "^7.4.0",
     "@simplewebauthn/server": "^7.4.0",
+    "@types/ua-parser-js": "^0.7.36",
     "@vercel/node": "^2.10.3",
     "bcrypt": "^5.1.0",
     "classnames": "^2.3.2",
@@ -21,6 +22,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "resend": "^0.17.2",
+    "ua-parser-js": "^1.0.35",
     "zod": "^3.21.4"
   },
   "devDependencies": {
