--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@vercel/node": "^2.10.3",
     "bcrypt": "^5.1.0",
     "classnames": "^2.3.2",
+    "date-fns": "^2.30.0",
     "isbot": "^3.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
