add: category to manifest

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -63,5 +63,10 @@
             "type": "image/png",
             "src": "/screenshots/home.png"
         }
+    ],
+    "categories": [
+        "security",
+        "utilities",
+        "education"
     ]
 }
