add: launch_handler to manifest

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -68,5 +68,10 @@
         "security",
         "utilities",
         "education"
-    ]
+    ],
+    "launch_handler": {
+        "client_mode": [
+            "navigate-existing, auto"
+        ]
+    }
 }
