--- a/public/manifest.json
+++ b/public/manifest.json
@@ -29,25 +29,25 @@
   "start_url": ".",
   "icons": [
     {
-      "src": "\\//manifest-icon-192.maskable.png",
+      "src": "/manifest-icon-192.maskable.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "\\//manifest-icon-192.maskable.png",
+      "src": "/manifest-icon-192.maskable.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "maskable"
     },
     {
-      "src": "\\//manifest-icon-512.maskable.png",
+      "src": "/manifest-icon-512.maskable.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "\\//manifest-icon-512.maskable.png",
+      "src": "/manifest-icon-512.maskable.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable"
