--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "worker:dev": "node ./scripts/sw/build.mjs --dev"
   },
   "dependencies": {
+    "@cheprasov/qrcode": "^0.1.0",
     "@prisma/client": "^5.1.1",
+    "@radix-ui/react-switch": "^1.0.3",
     "@remix-pwa/sw": "^1.1.3",
     "@remix-run/node": "^1.19.1",
     "@remix-run/react": "^1.19.1",
@@ -25,6 +27,7 @@
     "classnames": "^2.3.2",
     "date-fns": "^2.30.0",
     "isbot": "^3.6.8",
+    "otpauth": "^9.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "resend": "^0.17.2",
