--- a/package.json
+++ b/package.json
@@ -15,16 +15,15 @@
     "@akamfoad/qrcode": "^0.1.0",
     "@prisma/client": "^5.2.0",
     "@radix-ui/react-switch": "^1.0.3",
-    "@remix-pwa/sw": "^1.1.3",
-    "@remix-run/node": "^1.19.1",
-    "@remix-run/react": "^1.19.1",
-    "@remix-run/vercel": "^1.19.1",
+    "@remix-pwa/strategy": "^2.1.9",
+    "@remix-pwa/sw": "^2.1.12",
+    "@remix-run/react": "^2.1.0",
     "@simplewebauthn/browser": "^8.0.2",
     "@simplewebauthn/server": "^8.1.1",
     "@tailwindcss/container-queries": "^0.1.1",
     "@types/ua-parser-js": "^0.7.36",
-    "@vercel/node": "^2.0.0",
-    "bcrypt": "^5.1.0",
+    "@vercel/remix": "^2.1.0",
+    "bcrypt": "^5.1.1",
     "classnames": "^2.3.2",
     "date-fns": "^2.30.0",
     "isbot": "^3.6.8",
@@ -36,19 +35,19 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.19.1",
-    "@remix-run/eslint-config": "^1.19.1",
-    "@remix-run/serve": "^1.19.1",
+    "@remix-run/dev": "^2.1.0",
+    "@remix-run/eslint-config": "^2.1.0",
+    "@remix-run/serve": "^2.1.0",
     "@simplewebauthn/typescript-types": "^8.0.0",
     "@tailwindcss/typography": "^0.5.9",
-    "@types/bcrypt": "^5.0.0",
-    "@types/node": "^20.4.5",
+    "@types/bcrypt": "^5.0.1",
+    "@types/node": "^20.8.8",
     "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
     "esbuild": "^0.19.2",
     "eslint": "^8.38.0",
     "prisma": "^5.2.0",
-    "remix-development-tools": "^2.3.1",
+    "remix-development-tools": "^3.3.0",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.4"
   },
