--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "@akamfoad/qrcode": "^0.1.0",
     "@prisma/client": "^5.5.0",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@remix-pwa/strategy": "^2.1.9",
     "@remix-pwa/sw": "^2.1.12",
@@ -24,13 +26,18 @@
     "@tailwindcss/container-queries": "^0.1.1",
     "@vercel/remix": "^2.1.0",
     "bcrypt": "^5.1.1",
+    "class-variance-authority": "^0.7.0",
     "classnames": "^2.3.2",
+    "clsx": "^2.1.0",
     "date-fns": "^2.30.0",
     "isbot": "^3.7.0",
+    "lucide-react": "^0.334.0",
     "otpauth": "^9.1.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "resend": "^1.1.0",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7",
     "ua-parser-js": "^1.0.35",
     "zod": "^3.22.4"
   },
