--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "classnames": "^2.3.2",
     "clsx": "^2.1.0",
     "date-fns": "^2.30.0",
+    "embla-carousel-react": "^8.0.0-rc23",
     "isbot": "^3.7.0",
     "lucide-react": "^0.334.0",
     "otpauth": "^9.1.5",
